Folder containing landing site files

--- a/Recipe generator/index.html
+++ b/Recipe generator/index.html
@@ -52,9 +52,9 @@
     <section id="development-team">
         <h2>Meet the Team</h2>
         <div class="team-member">
-            <img src="developer1.jpg" alt="Developer 1">
-            <p>John Doe</p>
-            <p>Developer</p>
+            <img src="img/chris.jpg" alt="Developer 1">
+            <p>Chris Stirneman</p>
+            <p>I am a student at Bellarmine University studying software engineering.<br> I was born and raised in Louisville, KY and I enjoy spending time with my family and my dog.</p>
         </div>
         <div class="team-member">
             <img src="developer2.jpg" alt="Developer 2">
