Folder containing files for landing page. Added pic and bio for Chris and the food images.

--- a/Recipe generator/index.html
+++ b/Recipe generator/index.html
@@ -45,8 +45,12 @@
 
     <section id="imagery">
         <h2>Discover the Possibilities</h2>
-        <!-- Add images here -->
-        <img src="recipe_image.jpg" alt="Delicious food image">
+        <div class="food-images">
+            <img class="image-container" src="img/americanFood.jpg" alt="American food image">
+            <img class="image-container" src="img/asianFood.jpg" alt="Asian food image">
+            <img class="image-container" src="img/italianFood.jpg" alt="Italian food image">
+        </div>
+        
     </section>
 
     <section id="development-team">
