Folder with landing page files

--- a/Recipe generator/index.html
+++ b/Recipe generator/index.html
@@ -62,17 +62,17 @@
         </div>
         <div class="team-member">
             <img src="developer2.jpg" alt="Developer 2">
-            <p>John Doe</p>
+            <p>Patrick</p>
             <p>Developer</p>
         </div>
         <div class="team-member">
             <img src="developer3.jpg" alt="Developer 1">
-            <p>John Doe</p>
+            <p>Matthew</p>
             <p>Developer</p>
         </div>
         <div class="team-member">
             <img src="developer4.jpg" alt="Developer 2">
-            <p>John Doe</p>
+            <p>Rheann</p>
             <p>Developer</p>
         </div>
         
