Added bio and pic for Matthew

--- a/Recipe generator/index.html
+++ b/Recipe generator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>FlavoFind</title>
+    <title>FlavorFind</title>
 </head>
 <body>
     <header>
@@ -66,12 +66,12 @@
             <p>Developer</p>
         </div>
         <div class="team-member">
-            <img src="developer3.jpg" alt="Developer 1">
-            <p>Matthew</p>
-            <p>Developer</p>
+            <img src="img/matthew.jpg" alt="Developer 3">
+            <p>Matthew Maharrey</p>
+            <p>Hi, I'm Matthew. Currently I am a Software and Data Engineering Student at Bellarmine.<br> I am from Mississippi and moved to Louisville a few years ago with my wife and 2 dogs. </p>
         </div>
         <div class="team-member">
-            <img src="developer4.jpg" alt="Developer 2">
+            <img src="developer4.jpg" alt="Developer 4">
             <p>Rheann</p>
             <p>Developer</p>
         </div>
